...
        child: Form(
          key: _formKey,
          child: Column(
            children: [
              if (val.hasError) ErrorContainer(error: val.error.toString()),
              AppTextField(
                key: ValueKey('email-field'),
                labelKey: 'email',
                nextFocusNode: _passwordFocusNode,
                keyboardType: TextInputType.emailAddress,
                validators: [
                  RequiredValidator(errorText: 'Email is required'),
                  EmailValidator(errorText: 'Email is invalid'),
                ],
                initialValue: email,
                onSaved: (val) => email = val ?? '',
              ),
              AppTextField(
                key: ValueKey('password-field'),
                labelKey: 'password',
                focusNode: _passwordFocusNode,
                obscureText: true,
                validators: [
                  RequiredValidator(errorText: 'Password is required'),
                ],
...
