{
  "email": "Email",
  "password": "Password",
  "logIn": "Log In"
}